# bilidownloader-cmd

./: .gitignore  README.md  arglist.md  bdown.py  client.py  config.py  config.yaml  cookies_manager.py  download.py  main.py  model.py  models.py  param_help.py  pyproject.toml  requirements.txt  server.py  task_manager.py  utils.py
src/: __init__.py
src/client/: __init__.py  api.py  cli.py
src/common/: __init__.py  logger.py  models.py  utils.py
src/common/param_helps/: __init__.py  client_help.py  server_help.py  shared_help.py
src/server/: __init__.py  app_factory.py  download_service.py  routes.py  server_core.py  video_service.py
src/service/: __init__.py  config_manager.py  cookies_manager.py  download.py  task_manager.py
src/tools/: __init__.py  create_config.py
